--- a/W1D4/Shakshuka /assets/css_reset.css
+++ b/W1D4/Shakshuka /assets/css_reset.css
@@ -27,9 +27,7 @@ h2 + .user_review {
 /* This is useful when implementing a grid system so that all image elements
 will take up 100% width of their containers */
 img {
-  width: 100%;
-  /* display: inline-block; */
+  width: 100%
 }
-
 
 
