--- a/W2D1/MusicApp/app/assets/stylesheets/base.scss
+++ b/W2D1/MusicApp/app/assets/stylesheets/base.scss
@@ -55,6 +55,12 @@ font-family: 'Fredoka One';
 
 }
 
+.show-p {
+  font-family: 'Fredoka One';
+  font-size: 24px;
+  color: #fff;
+}
+
 .main-background {
   background-image: url('https://cdn.wallpapersafari.com/39/6/DRtqar.jpg');
   background-repeat: no-repeat; 
