--- a/W2D1/MusicApp/app/views/users/show.html.erb
+++ b/W2D1/MusicApp/app/views/users/show.html.erb
@@ -1,2 +1,4 @@
-<h1 class='page-header'>Welcome Back! <%= current_user %> </h1>
+
+<h1 class="show-p"> Welcome back! <%= current_user.email_address %> </h1>
+  <p>Lets get started!</p>
 
