--- a/W2D1/MusicApp/app/views/layouts/application.html.erb
+++ b/W2D1/MusicApp/app/views/layouts/application.html.erb
@@ -18,23 +18,21 @@
           <% if current_user.nil? %>
           <a href="<%= new_session_url %>"></a>
           <a href="<%= new_users_url %>"></a>
-          <%else%>
+          <%elsif logged_in?%>
             <p>Logged in user: <%= current_user.email_address %> </p>
+            <a class='button' href="<%= bands_url %>">Take me Home</a>
+
             <form action="<%= session_url %>" method="post">
             <%= auth_token %>
 
             <input type= "hidden" name= "_method" value= "delete">
             <input type= "submit" value= "logout">
-            
+
             </form>
           <%end%>
       </div>
     </nav>
-
-    <main>
       <%= yield %>
-    </main>
-
   </div>
   </body>
 </html>
